fixing quote mark

--- a/names.yml
+++ b/names.yml
@@ -5,7 +5,7 @@
 #   oneforone: "Jane Williams"
 #   oneforonehandle: "@JaneWilliams895464"
 
-- name: "Erie Meyer
+- name: "Erie Meyer"
   handle: "@erie"
   oneforone: "Aminatou Sow"
   oneforonehandle: "@Aminatou"
