--- a/names.yml
+++ b/names.yml
@@ -5,7 +5,12 @@
 #   oneforone: "Jane Williams"
 #   oneforonehandle: "@JaneWilliams895464"
 
-- name: "Erie Meyer
+- name: "Erie Meyer"
   handle: "@erie"
   oneforone: "Aminatou Sow"
   oneforonehandle: "@Aminatou"
+  
+- name: "Noah Kunin"
+  handle: "@noahkunin"
+  oneforone: "Laurenellen McCann
+  oneforonehandle: "@elle_mccann"
