--- a/names.yml
+++ b/names.yml
@@ -12,5 +12,11 @@
   
 - name: "Noah Kunin"
   handle: "@noahkunin"
-  oneforone: "Laurenellen McCann
+  oneforone: "Laurenellen McCann"
   oneforonehandle: "@elle_mccann"
+  
+- name: "Alla Goldman"
+  handle: "@allagoldman"
+  oneforone: "Eric Mill"
+  oneforonehandle: "@konklone"
+
