--- a/names.yml
+++ b/names.yml
@@ -1,16 +1,20 @@
 # This file lists one4ones. Please add your own! Below is an example one4one:
   
 # - name: "Joe Smith"
-#   handle: "@JoeSmith89389"
+#   handle: "JoeSmith89389"
 #   oneforone: "Jane Williams"
-#   oneforonehandle: "@JaneWilliams895464"
+#   oneforonehandle: "JaneWilliams895464"
+#   oneforoneplatform: "https://twitter.com"
 
 - name: "Erie Meyer"
-  handle: "@erie"
+  handle: "erie"
   oneforone: "Aminatou Sow"
-  oneforonehandle: "@Aminatou"
+  oneforonehandle: "Aminatou"
+  oneforoneplatform: "https://twitter.com/"
   
 - name: "Noah Kunin"
-  handle: "@noahkunin"
+  handle: "noahkunin"
   oneforone: "Laurenellen McCann
-  oneforonehandle: "@elle_mccann"
+  oneforonehandle: "elle_mccann"
+  oneforoneplatform: "https://twitter.com/"
+
