adding Gray Brooks

--- a/names.yml
+++ b/names.yml
@@ -18,3 +18,8 @@
   oneforonehandle: "elle_mccann"
   oneforoneplatform: "https://twitter.com/"
 
+- name: "Gray Brooks"
+  handle: "gbinal"
+  oneforone: "Marina Martin"
+  oneforonehandle: "MarinaMartin"
+  oneforoneplatform: "https://twitter.com/"
