--- a/names.yml
+++ b/names.yml
@@ -3,18 +3,18 @@
 # - name: "Joe Smith"
 #   handle: "JoeSmith89389"
 #   oneforone: "Jane Williams"
-#   oneforonehandle: "JaneWilliams895464"
-#   oneforoneplatform: "https://twitter.com"
+#     handle: "JaneWilliams895464"
+#     platform: "https://twitter.com"
 
 - name: "Erie Meyer"
   handle: "erie"
   oneforone: "Aminatou Sow"
-  oneforonehandle: "Aminatou"
-  oneforoneplatform: "https://twitter.com/"
+    handle: "Aminatou"
+    platform: "https://twitter.com/"
   
 - name: "Noah Kunin"
   handle: "noahkunin"
-  oneforone: "Laurenellen McCann
-  oneforonehandle: "elle_mccann"
-  oneforoneplatform: "https://twitter.com/"
+  oneforone: "Laurenellen McCann"
+    handle: "elle_mccann"
+    platform: "https://twitter.com/"
 
