--- a/names.yml
+++ b/names.yml
@@ -41,9 +41,17 @@
     name: "Jamaä Bickley-King"
     handle: "jamaa.bickleyking"
     platform: "https://www.facebook.com/"
+    
 - name: "Derek Willis"
   handle: "dwillis"
   oneforone:
     name: "Michelle Minkoff"
     handle: "michelleminkoff"
+    platform: "https://twitter.com/"
+    
+- name: "Ariel Norling"
+  handle: "ariel_n"
+  oneforone:
+    name: "Ope Bukola"
+    handle: "ope_bukola"
     platform: "https://twitter.com/"
