--- a/names.yml
+++ b/names.yml
@@ -62,3 +62,10 @@
     name: "Amberley Romo"
     handle: "amberleyjohanna"
     platform: "https://twitter.com/"
+
+- name: "Mark Ferlatte"
+  handle: "ferlatte"
+  oneforone:
+    name: "Jen Leech"
+    handle: "jennifermleech"
+    platform: "https://twitter.com"
