--- a/names.yml
+++ b/names.yml
@@ -104,3 +104,11 @@ oneforone:
   name: "Kelly Flood"
   handle: "kellyflood"
   platform: "https://twitter.com"
+  
+  - name: "Laurenellen McCann"
+handle: "elle_mccann"
+oneforone:
+  name: "Sharon Paley"
+  handle: "Sharon_Paley"
+  platform: "https://twitter.com"
+
