--- a/names.yml
+++ b/names.yml
@@ -111,4 +111,10 @@ oneforone:
   name: "Sharon Paley"
   handle: "Sharon_Paley"
   platform: "https://twitter.com"
-
+  
+  - name: "Leigh Heyman"
+handle: "leighd2k"
+oneforone:
+  name: "Rusty Pickens"
+  handle: "rpickens"
+  platform: "https://twitter.com"
