--- a/names.yml
+++ b/names.yml
@@ -112,3 +112,9 @@ oneforone:
   handle: "Sharon_Paley"
   platform: "https://twitter.com"
 
+  - name: "Jessie Posilkin"
+handle: "jposi"
+oneforone:
+  name: "Jenn Stowe"
+  handle: "jennisaisquoi"
+  platform: "https://twitter.com"
